[gd_scene load_steps=28 format=3 uid="uid://dt3hw6ocf2cl7"]

[ext_resource type="Script" uid="uid://d1k5s12vcpuql" path="res://actors/enemy/enemy_scenes/base_enemy/enemy.gd" id="1_0bajq"]
[ext_resource type="Texture2D" uid="uid://btc0385l67exe" path="res://_assets/enemy/placeholder_enemy_spritesheet.png" id="2_ntjkm"]
[ext_resource type="Script" uid="uid://d3x6ygbikx1wm" path="res://actors/state_machine/base_state_machine_scripts/state_machine.gd" id="4_laeoq"]
[ext_resource type="Script" uid="uid://bhyqgug1jbxqg" path="res://actors/state_machine/enemy_states/enemy_idle.gd" id="4_ntjkm"]
[ext_resource type="Script" uid="uid://cl15npn1uos1n" path="res://actors/state_machine/enemy_states/enemy_walk.gd" id="5_ntjkm"]
[ext_resource type="Script" uid="uid://c3stcs3g00qcn" path="res://actors/state_machine/enemy_states/enemy_patrol.gd" id="6_ntjkm"]
[ext_resource type="Script" uid="uid://bfnnu6w6usg8o" path="res://actors/state_machine/enemy_states/enemy_caution.gd" id="8_a7sam"]
[ext_resource type="Script" uid="uid://cq3703o6xaaa0" path="res://actors/state_machine/enemy_states/enemy_alert.gd" id="8_ntjkm"]
[ext_resource type="Script" uid="uid://c6xswr1r23i6x" path="res://actors/state_machine/npc_states/npc_follow.gd" id="8_ordjh"]
[ext_resource type="PackedScene" uid="uid://cgyymkjxthh20" path="res://_common/area_interact/area_interact.tscn" id="9_53jt1"]
[ext_resource type="Script" uid="uid://dsqepnvdhvj58" path="res://actors/enemy/enemy_scenes/base_enemy/walk_area.gd" id="10_q6shg"]

[sub_resource type="Animation" id="Animation_b1uet"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_pflqk"]
resource_name = "idle_down"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_y0uyn"]
resource_name = "idle_left"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_gv10s"]
resource_name = "idle_right"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_kujp3"]
resource_name = "idle_up"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_pjn5c"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_ry0v3"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_fbroj"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_7ar1o"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1uet"]
_data = {
&"RESET": SubResource("Animation_b1uet"),
&"idle_down": SubResource("Animation_pflqk"),
&"idle_left": SubResource("Animation_y0uyn"),
&"idle_right": SubResource("Animation_gv10s"),
&"idle_up": SubResource("Animation_kujp3"),
&"walk_down": SubResource("Animation_pjn5c"),
&"walk_left": SubResource("Animation_ry0v3"),
&"walk_right": SubResource("Animation_fbroj"),
&"walk_up": SubResource("Animation_7ar1o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1uet"]
size = Vector2(16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umrb1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_usjcl"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q6shg"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a7sam"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muh4v"]
size = Vector2(96, 96)

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 8
collision_mask = 16
motion_mode = 1
script = ExtResource("1_0bajq")
will_walk = true
default_move_speed = 30.0

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_ntjkm")
offset = Vector2(0, -15)
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_b1uet")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
max_polyphony = 5

[node name="AudioListener2D" type="AudioListener2D" parent="."]
unique_name_in_owner = true
process_mode = 1
current = true

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_b1uet")

[node name="StateMachine" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_laeoq")

[node name="Idle" type="Node2D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("4_ntjkm")

[node name="Walk" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("next_state")]
unique_name_in_owner = true
script = ExtResource("5_ntjkm")
next_state = NodePath("../Idle")

[node name="Talking" type="Node2D" parent="StateMachine"]

[node name="Patrol" type="Node2D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("6_ntjkm")

[node name="Follow" type="Node2D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("8_ordjh")

[node name="Caution" type="Node2D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("8_a7sam")

[node name="Alert" type="Node2D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("8_ntjkm")

[node name="AreaInteract" parent="." instance=ExtResource("9_53jt1")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaInteract"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_umrb1")
debug_color = Color(0, 0.3557534, 0.822601, 0.41960785)

[node name="SeeArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitorable = false

[node name="SeeShape2D" type="CollisionShape2D" parent="SeeArea2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_usjcl")
debug_color = Color(0.78431374, 0.78431374, 0.78431374, 0)

[node name="CautionArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitorable = false

[node name="CautionShape2D" type="CollisionShape2D" parent="CautionArea2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_q6shg")
debug_color = Color(0.48235294, 0.42352942, 0, 0)

[node name="AlertArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitorable = false

[node name="AlertShape2D" type="CollisionShape2D" parent="AlertArea2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_a7sam")
debug_color = Color(1, 0, 0, 0)

[node name="WalkArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("10_q6shg")

[node name="WalkShape2D" type="CollisionShape2D" parent="WalkArea2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_muh4v")
debug_color = Color(1, 0, 0.5372549, 0)

[node name="DetectTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
autostart = true

[node name="CollTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
